--- a/page_2.html
+++ b/page_2.html
@@ -50,6 +50,475 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- Unnamed (矩形) -->
+      <div id="u314" class="ax_default box_1">
+        <div id="u314_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u315" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- CustomerName (矩形) -->
+      <div id="u316" class="ax_default heading_3" data-label="CustomerName">
+        <div id="u316_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u317" class="text" style="visibility: visible;">
+          <p><span>客户姓名</span></p>
+        </div>
+      </div>
+
+      <!-- IDCard (矩形) -->
+      <div id="u318" class="ax_default heading_3" data-label="IDCard">
+        <div id="u318_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u319" class="text" style="visibility: visible;">
+          <p><span>身份证号</span></p>
+        </div>
+      </div>
+
+      <!-- ApplyID (矩形) -->
+      <div id="u320" class="ax_default heading_3" data-label="ApplyID">
+        <div id="u320_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u321" class="text" style="visibility: visible;">
+          <p><span>合同单号</span></p>
+        </div>
+      </div>
+
+      <!-- StoreName (矩形) -->
+      <div id="u322" class="ax_default heading_3" data-label="StoreName">
+        <div id="u322_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u323" class="text" style="visibility: visible;">
+          <p><span>门店名称</span></p>
+        </div>
+      </div>
+
+      <!-- Inquire (矩形) -->
+      <div id="u324" class="ax_default button" data-label="Inquire">
+        <div id="u324_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u325" class="text" style="visibility: visible;">
+          <p><span>查询</span></p>
+        </div>
+      </div>
+
+      <!-- WorkStart (矩形) -->
+      <div id="u326" class="ax_default button" data-label="WorkStart">
+        <div id="u326_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u327" class="text" style="visibility: visible;">
+          <p><span>取消挂账</span></p>
+        </div>
+      </div>
+
+      <!-- CustomerName_Enter (文本框) -->
+      <div id="u328" class="ax_default text_field" data-label="CustomerName_Enter">
+        <input id="u328_input" type="text" value=""/>
+      </div>
+
+      <!-- IDCard_Enter (文本框) -->
+      <div id="u329" class="ax_default text_field" data-label="IDCard_Enter">
+        <input id="u329_input" type="text" value=""/>
+      </div>
+
+      <!-- ApplyID_Enter (文本框) -->
+      <div id="u330" class="ax_default text_field" data-label="ApplyID_Enter">
+        <input id="u330_input" type="text" value=""/>
+      </div>
+
+      <!-- SalesTeam_Enter (下拉列表框) -->
+      <div id="u331" class="ax_default droplist" data-label="SalesTeam_Enter">
+        <select id="u331_input">
+          <option value=" ">&nbsp;</option>
+          <option value="上海市福州路营业部">上海市福州路营业部</option>
+          <option value="广州市五四营业部">广州市五四营业部</option>
+        </select>
+      </div>
+
+      <!-- Deatle (表格) -->
+      <div id="u332" class="ax_default" data-label="Deatle">
+
+        <!-- Unnamed (单元格) -->
+        <div id="u333" class="ax_default table_cell">
+          <img id="u333_img" class="img " src="images/home/u146.png"/>
+          <!-- Unnamed () -->
+          <div id="u334" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u335" class="ax_default table_cell">
+          <img id="u335_img" class="img " src="images/home/u148.png"/>
+          <!-- Unnamed () -->
+          <div id="u336" class="text" style="visibility: visible;">
+            <p><span>合同单号</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u337" class="ax_default table_cell">
+          <img id="u337_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u338" class="text" style="visibility: visible;">
+            <p><span>客户姓名</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u339" class="ax_default table_cell">
+          <img id="u339_img" class="img " src="images/home/u152.png"/>
+          <!-- Unnamed () -->
+          <div id="u340" class="text" style="visibility: visible;">
+            <p><span>身份证号</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u341" class="ax_default table_cell">
+          <img id="u341_img" class="img " src="images/home/u154.png"/>
+          <!-- Unnamed () -->
+          <div id="u342" class="text" style="visibility: visible;">
+            <p><span>资金渠道</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u343" class="ax_default table_cell">
+          <img id="u343_img" class="img " src="images/home/u156.png"/>
+          <!-- Unnamed () -->
+          <div id="u344" class="text" style="visibility: visible;">
+            <p><span>挂账日期</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u345" class="ax_default table_cell">
+          <img id="u345_img" class="img " src="images/home/u154.png"/>
+          <!-- Unnamed () -->
+          <div id="u346" class="text" style="visibility: visible;">
+            <p><span>挂账期数</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u347" class="ax_default table_cell">
+          <img id="u347_img" class="img " src="images/home/u160.png"/>
+          <!-- Unnamed () -->
+          <div id="u348" class="text" style="visibility: visible;">
+            <p><span>合同签订时间</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u349" class="ax_default table_cell">
+          <img id="u349_img" class="img " src="images/home/u67.png"/>
+          <!-- Unnamed () -->
+          <div id="u350" class="text" style="visibility: visible;">
+            <p><span>签约产品</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u351" class="ax_default table_cell">
+          <img id="u351_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u352" class="text" style="visibility: visible;">
+            <p><span>合同金额</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u353" class="ax_default table_cell">
+          <img id="u353_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u354" class="text" style="visibility: visible;">
+            <p><span>合同期限</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u355" class="ax_default table_cell">
+          <img id="u355_img" class="img " src="images/home/u168.png"/>
+          <!-- Unnamed () -->
+          <div id="u356" class="text" style="visibility: visible;">
+            <p><span>门店</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u357" class="ax_default table_cell">
+          <img id="u357_img" class="img " src="images/home/u146.png"/>
+          <!-- Unnamed () -->
+          <div id="u358" class="text" style="visibility: visible;">
+            <p><span>1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u359" class="ax_default table_cell">
+          <img id="u359_img" class="img " src="images/home/u148.png"/>
+          <!-- Unnamed () -->
+          <div id="u360" class="text" style="visibility: visible;">
+            <p><span>C20151217155908565446</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u361" class="ax_default table_cell">
+          <img id="u361_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u362" class="text" style="visibility: visible;">
+            <p><span>王浩</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u363" class="ax_default table_cell">
+          <img id="u363_img" class="img " src="images/home/u152.png"/>
+          <!-- Unnamed () -->
+          <div id="u364" class="text" style="visibility: visible;">
+            <p><span>31023019XXXXXX2346</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u365" class="ax_default table_cell">
+          <img id="u365_img" class="img " src="images/home/u154.png"/>
+          <!-- Unnamed () -->
+          <div id="u366" class="text" style="visibility: visible;">
+            <p><span>xyd1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u367" class="ax_default table_cell">
+          <img id="u367_img" class="img " src="images/home/u156.png"/>
+          <!-- Unnamed () -->
+          <div id="u368" class="text" style="visibility: visible;">
+            <p><span>2017-05-17</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u369" class="ax_default table_cell">
+          <img id="u369_img" class="img " src="images/home/u154.png"/>
+          <!-- Unnamed () -->
+          <div id="u370" class="text" style="visibility: visible;">
+            <p><span>5</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u371" class="ax_default table_cell">
+          <img id="u371_img" class="img " src="images/home/u160.png"/>
+          <!-- Unnamed () -->
+          <div id="u372" class="text" style="visibility: visible;">
+            <p><span>2017-05-17</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u373" class="ax_default table_cell">
+          <img id="u373_img" class="img " src="images/home/u67.png"/>
+          <!-- Unnamed () -->
+          <div id="u374" class="text" style="visibility: visible;">
+            <p><span>U贷通1.4</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u375" class="ax_default table_cell">
+          <img id="u375_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u376" class="text" style="visibility: visible;">
+            <p><span>60400.00</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u377" class="ax_default table_cell">
+          <img id="u377_img" class="img " src="images/home/u150.png"/>
+          <!-- Unnamed () -->
+          <div id="u378" class="text" style="visibility: visible;">
+            <p><span>24</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u379" class="ax_default table_cell">
+          <img id="u379_img" class="img " src="images/home/u168.png"/>
+          <!-- Unnamed () -->
+          <div id="u380" class="text" style="visibility: visible;">
+            <p><span>上海市福州路营业部</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u381" class="ax_default table_cell">
+          <img id="u381_img" class="img " src="images/home/u194.png"/>
+          <!-- Unnamed () -->
+          <div id="u382" class="text" style="visibility: visible;">
+            <p><span>2</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u383" class="ax_default table_cell">
+          <img id="u383_img" class="img " src="images/home/u196.png"/>
+          <!-- Unnamed () -->
+          <div id="u384" class="text" style="visibility: visible;">
+            <p><span>C2015122109525482359664</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u385" class="ax_default table_cell">
+          <img id="u385_img" class="img " src="images/home/u198.png"/>
+          <!-- Unnamed () -->
+          <div id="u386" class="text" style="visibility: visible;">
+            <p><span>麻玉争</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u387" class="ax_default table_cell">
+          <img id="u387_img" class="img " src="images/home/u200.png"/>
+          <!-- Unnamed () -->
+          <div id="u388" class="text" style="visibility: visible;">
+            <p><span>31013419XXXXXX2146</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u389" class="ax_default table_cell">
+          <img id="u389_img" class="img " src="images/home/u202.png"/>
+          <!-- Unnamed () -->
+          <div id="u390" class="text" style="visibility: visible;">
+            <p><span>xyd1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u391" class="ax_default table_cell">
+          <img id="u391_img" class="img " src="images/home/u204.png"/>
+          <!-- Unnamed () -->
+          <div id="u392" class="text" style="visibility: visible;">
+            <p><span>2017-05-21</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u393" class="ax_default table_cell">
+          <img id="u393_img" class="img " src="images/home/u202.png"/>
+          <!-- Unnamed () -->
+          <div id="u394" class="text" style="visibility: visible;">
+            <p><span>4</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u395" class="ax_default table_cell">
+          <img id="u395_img" class="img " src="images/home/u208.png"/>
+          <!-- Unnamed () -->
+          <div id="u396" class="text" style="visibility: visible;">
+            <p><span>2017-05-21</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u397" class="ax_default table_cell">
+          <img id="u397_img" class="img " src="images/home/u210.png"/>
+          <!-- Unnamed () -->
+          <div id="u398" class="text" style="visibility: visible;">
+            <p><span>同业贷E贷通2.2</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u399" class="ax_default table_cell">
+          <img id="u399_img" class="img " src="images/home/u198.png"/>
+          <!-- Unnamed () -->
+          <div id="u400" class="text" style="visibility: visible;">
+            <p><span>15400.00</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u401" class="ax_default table_cell">
+          <img id="u401_img" class="img " src="images/home/u198.png"/>
+          <!-- Unnamed () -->
+          <div id="u402" class="text" style="visibility: visible;">
+            <p><span>36</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u403" class="ax_default table_cell">
+          <img id="u403_img" class="img " src="images/home/u216.png"/>
+          <!-- Unnamed () -->
+          <div id="u404" class="text" style="visibility: visible;">
+            <p><span>上海市福州路营业部</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CapitalChannel (矩形) -->
+      <div id="u405" class="ax_default heading_3" data-label="CapitalChannel">
+        <div id="u405_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u406" class="text" style="visibility: visible;">
+          <p><span>资金渠道</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u407" class="ax_default ax_default_hidden" style="display: none; visibility: hidden">
+        <div id="u407_state0" class="panel_state" data-label="State1">
+          <div id="u407_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u408" class="ax_default box_1">
+              <div id="u408_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u409" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u410" class="ax_default button">
+              <div id="u410_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u411" class="text" style="visibility: visible;">
+                <p><span>确认</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u412" class="ax_default paragraph">
+              <div id="u412_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u413" class="text" style="visibility: visible;">
+                <p><span>挂账已取消</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- CapitalChannel_Enter (下拉列表框) -->
+      <div id="u414" class="ax_default droplist" data-label="CapitalChannel_Enter">
+        <select id="u414_input">
+          <option value="小雨点">小雨点</option>
+        </select>
+      </div>
+
+      <!-- CapitalChannel_Enter (下拉列表框) [footnote] -->
+      <div id="u414_ann" class="annotation"></div>
     </div>
   </body>
 </html>
