--- a/home.html
+++ b/home.html
@@ -296,6 +296,9 @@
               </div>
             </div>
 
+            <!-- Inquire (矩形) [footnote] -->
+            <div id="u50_ann" class="annotation"></div>
+
             <!-- WorkStart (矩形) -->
             <div id="u52" class="ax_default button" data-label="WorkStart">
               <div id="u52_div" class=""></div>
@@ -649,6 +652,9 @@
                     </div>
                   </div>
 
+                  <!-- Unnamed (矩形) [footnote] -->
+                  <div id="u121_ann" class="annotation"></div>
+
                   <!-- Unnamed (矩形) -->
                   <div id="u123" class="ax_default paragraph">
                     <div id="u123_div" class=""></div>
@@ -711,7 +717,7 @@
               <div id="u133_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u134" class="text" style="visibility: visible;">
-                <p><span>合同单号</span></p>
+                <p><span>申请单号</span></p>
               </div>
             </div>
 
@@ -732,6 +738,9 @@
                 <p><span>查询</span></p>
               </div>
             </div>
+
+            <!-- Inquire (矩形) [footnote] -->
+            <div id="u137_ann" class="annotation"></div>
 
             <!-- WorkStart (矩形) -->
             <div id="u139" class="ax_default button" data-label="WorkStart">
@@ -783,7 +792,7 @@
                 <img id="u148_img" class="img " src="images/home/u148.png"/>
                 <!-- Unnamed () -->
                 <div id="u149" class="text" style="visibility: visible;">
-                  <p><span>合同单号</span></p>
+                  <p><span>申请单号</span></p>
                 </div>
               </div>
 
@@ -807,7 +816,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u154" class="ax_default table_cell">
-                <img id="u154_img" class="img " src="images/home/u154.png"/>
+                <img id="u154_img" class="img " src="images/home/u150.png"/>
                 <!-- Unnamed () -->
                 <div id="u155" class="text" style="visibility: visible;">
                   <p><span>资金渠道</span></p>
@@ -825,7 +834,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u158" class="ax_default table_cell">
-                <img id="u158_img" class="img " src="images/home/u154.png"/>
+                <img id="u158_img" class="img " src="images/home/u150.png"/>
                 <!-- Unnamed () -->
                 <div id="u159" class="text" style="visibility: visible;">
                   <p><span>挂账期数</span></p>
@@ -852,7 +861,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u164" class="ax_default table_cell">
-                <img id="u164_img" class="img " src="images/home/u150.png"/>
+                <img id="u164_img" class="img " src="images/home/u164.png"/>
                 <!-- Unnamed () -->
                 <div id="u165" class="text" style="visibility: visible;">
                   <p><span>合同金额</span></p>
@@ -861,7 +870,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u166" class="ax_default table_cell">
-                <img id="u166_img" class="img " src="images/home/u150.png"/>
+                <img id="u166_img" class="img " src="images/home/u164.png"/>
                 <!-- Unnamed () -->
                 <div id="u167" class="text" style="visibility: visible;">
                   <p><span>合同期限</span></p>
@@ -891,7 +900,7 @@
                 <img id="u172_img" class="img " src="images/home/u148.png"/>
                 <!-- Unnamed () -->
                 <div id="u173" class="text" style="visibility: visible;">
-                  <p><span>C20151217155908565446</span></p>
+                  <p><span>PL20151217155908565446</span></p>
                 </div>
               </div>
 
@@ -915,7 +924,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u178" class="ax_default table_cell">
-                <img id="u178_img" class="img " src="images/home/u154.png"/>
+                <img id="u178_img" class="img " src="images/home/u150.png"/>
                 <!-- Unnamed () -->
                 <div id="u179" class="text" style="visibility: visible;">
                   <p><span>xyd1</span></p>
@@ -933,7 +942,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u182" class="ax_default table_cell">
-                <img id="u182_img" class="img " src="images/home/u154.png"/>
+                <img id="u182_img" class="img " src="images/home/u150.png"/>
                 <!-- Unnamed () -->
                 <div id="u183" class="text" style="visibility: visible;">
                   <p><span>5</span></p>
@@ -960,7 +969,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u188" class="ax_default table_cell">
-                <img id="u188_img" class="img " src="images/home/u150.png"/>
+                <img id="u188_img" class="img " src="images/home/u164.png"/>
                 <!-- Unnamed () -->
                 <div id="u189" class="text" style="visibility: visible;">
                   <p><span>60400.00</span></p>
@@ -969,7 +978,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u190" class="ax_default table_cell">
-                <img id="u190_img" class="img " src="images/home/u150.png"/>
+                <img id="u190_img" class="img " src="images/home/u164.png"/>
                 <!-- Unnamed () -->
                 <div id="u191" class="text" style="visibility: visible;">
                   <p><span>24</span></p>
@@ -999,7 +1008,7 @@
                 <img id="u196_img" class="img " src="images/home/u196.png"/>
                 <!-- Unnamed () -->
                 <div id="u197" class="text" style="visibility: visible;">
-                  <p><span>C2015122109525482359664</span></p>
+                  <p><span>PL2015122109525482359664</span></p>
                 </div>
               </div>
 
@@ -1023,7 +1032,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u202" class="ax_default table_cell">
-                <img id="u202_img" class="img " src="images/home/u202.png"/>
+                <img id="u202_img" class="img " src="images/home/u198.png"/>
                 <!-- Unnamed () -->
                 <div id="u203" class="text" style="visibility: visible;">
                   <p><span>xyd1</span></p>
@@ -1041,7 +1050,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u206" class="ax_default table_cell">
-                <img id="u206_img" class="img " src="images/home/u202.png"/>
+                <img id="u206_img" class="img " src="images/home/u198.png"/>
                 <!-- Unnamed () -->
                 <div id="u207" class="text" style="visibility: visible;">
                   <p><span>4</span></p>
@@ -1068,7 +1077,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u212" class="ax_default table_cell">
-                <img id="u212_img" class="img " src="images/home/u198.png"/>
+                <img id="u212_img" class="img " src="images/home/u212.png"/>
                 <!-- Unnamed () -->
                 <div id="u213" class="text" style="visibility: visible;">
                   <p><span>15400.00</span></p>
@@ -1077,7 +1086,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u214" class="ax_default table_cell">
-                <img id="u214_img" class="img " src="images/home/u198.png"/>
+                <img id="u214_img" class="img " src="images/home/u212.png"/>
                 <!-- Unnamed () -->
                 <div id="u215" class="text" style="visibility: visible;">
                   <p><span>36</span></p>
@@ -1126,6 +1135,9 @@
                     </div>
                   </div>
 
+                  <!-- Unnamed (矩形) [footnote] -->
+                  <div id="u223_ann" class="annotation"></div>
+
                   <!-- Unnamed (矩形) -->
                   <div id="u225" class="ax_default paragraph">
                     <div id="u225_div" class=""></div>
@@ -1147,6 +1159,20 @@
 
             <!-- CapitalChannel_Enter (下拉列表框) [footnote] -->
             <div id="u227_ann" class="annotation"></div>
+
+            <!-- Time (矩形) -->
+            <div id="u228" class="ax_default heading_3" data-label="Time">
+              <div id="u228_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u229" class="text" style="visibility: visible;">
+                <p><span>挂账日期</span></p>
+              </div>
+            </div>
+
+            <!-- Time_Enter (文本框) -->
+            <div id="u230" class="ax_default text_field" data-label="Time_Enter">
+              <input id="u230_input" type="date" value=""/>
+            </div>
           </div>
         </div>
       </div>
